feat: added methods create(E entity) in some DTOs